--- a/lab01/todo/requirements.txt
+++ b/lab01/todo/requirements.txt
@@ -1,12 +1,13 @@
-Flask==2.1.2
+Flask==2.2.2
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.0
 flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
 Flask-RESTful==0.3.9
-Flask-SQLAlchemy==2.5.1
+Flask-SQLAlchemy==3.0.2
 marshmallow-sqlalchemy==0.28.0
 python-dotenv==0.20.0
 requests==2.27.1
 psycopg2-binary==2.9.3
+Werkzeug==2.3.7
 
